Connect the Posts completely to the Rails backend; get, new (post), and upvote (put) actions all implemented through the ui.router and posts service.
Signed-off-by: Dave Rowan <DRowan99@gmail.com>

--- a/app/assets/javascripts/home/_home.html
+++ b/app/assets/javascripts/home/_home.html
@@ -15,7 +15,7 @@
     </span>
   </span>
   <span>
-    <a href="#/posts/{{posts.indexOf(post)}}">Comments ({{ post.comments.length}})</a>
+    <a href="#/posts/{{ post.id }}">Comments ({{ post.comments.length}})</a>
   </span>
 </div>
 
